<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/spillport"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">
        <Button
            android:id="@+id/startSpill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="40sp"
            android:layout_marginBottom="20sp"
            android:backgroundTint="@color/green"
            android:text="@string/start" />

        <Button
            android:id="@+id/omSpillet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:backgroundTint="@color/orange"
            android:text="@string/omspillet" />

        <Button
            android:id="@+id/preferanser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:backgroundTint="@color/blue"
            android:text="@string/pref"/>
    </LinearLayout>
</LinearLayout>